coppermind/static/main.css
html {
  overflow: auto;
}

body {
  background: #fafafa;
  color: #333333;
  margin-top: 5rem;
  align-content: center;
  margin-bottom: 75px;
}

h1, h2, h3, h4, h5, h6 {
  color: #444444;
}

button {
  background-color: #cc6633;
  border-radius: 10px;
  display: inline;
}

footer {
  bottom: 0;
  position: fixed;
  height: 45px;
  left: 0;
  right: 0;
  background-color: rgb(32, 187, 214);
  margin-top: auto;
}

#footer {
  margin: auto;
  text-align: center;
  color: white;
  font-size: 20px;
}

#btn {
  display: inline;
  padding-left: 0px;
  padding-right: 16px;
}

.bg-steel {
  background-color: rgb(32, 187, 214);
}

a.navbar-brand.mr-4 {
  color: rgb(150, 105, 53);
  font-weight: bold;
  font-size: x-large;
}

.site-header .navbar-nav .nav-link {
  color: #ffffff;
  font-weight: bold;
}

.site-header .navbar-nav .nav-link:hover {
  color: rgb(150, 105, 53);
}

.site-header .navbar-nav .nav-link.active {
  font-weight: bold;
}

.content-section {
  background: #ffffff;
  padding: 10px 20px;
  border: 1px solid #dddddd;
  border-radius: 3px;
  margin-bottom: 20px;
}

.article-title {
  color: #444444;
}

a.article-title:hover {
  color: #428bca;
  text-decoration: none;
}

.article-content {
  white-space: pre-line;
}

.article-img {
  height: 65px;
  width: 65px;
  margin-right: 16px;
}

.article-metadata {
  padding-bottom: 1px;
  margin-bottom: 4px;
  border-bottom: 1px solid #e3e3e3
}

.article-metadata a:hover {
  color: #333;
  text-decoration: none;
}

.article-svg {
  width: 25px;
  height: 25px;
  vertical-align: middle;
}

.account-img {
  height: 125px;
  width: 125px;
  margin-right: 20px;
  margin-bottom: 16px;
}

.account-heading {
  font-size: 2.5rem;
}

